# VetVoice

./: .gitignore  LICENSE  README.md  case.db  llm_client.py  main.py  pyproject.toml  readme.md  requirements.txt  server.py  settings.py  t.py  test.py  test2.py  user.json
.claude/memory/: model_path_fix.md
agent/: client.py  mcp_server_case.py  mcp_server_llm.py
case/: db.py  llm.py  sql_manage.py  template.py
data/: medical_glossary.json
db/: case_db.py
diagnosis/: llm.py
docs/: T13_测试计划.md  T14_测试用例设计.md
img/: app.icns
mcp/: client.py  llm_client.py  server.py  tools.py
pyannote/embedding/: embeddings.npy  freqs.json  mapping.json
tests/: test_llm_response_handler.py  test_min_asr_seconds.py  test_vad_threshold.py
ui/: __init__.py  app.py  cs.py  login_dialog.py  path_dialog.py  voiceprint_dialog.py  waveview.py
ui/components/: asr_panel.py  bt_panel.py  form_pane.py  llm_panel.py  set_panel.py  voiceprint_panel.py
utils/: common.py  error_handler.py  llm_response_handler.py  loger_util.py  logger_config.py  medical_glossary.py  model_downloader.py  resource_path.py
voice/: asr.py  asr_funasr.py  recorder.py  speaker.py  speaker_realtime.py  voiceprint_manager.py  webrtc_apm_lite.py
