[project]
name = "vetvoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.18"
dependencies = [
    "duckdb>=1.3.2",
    "fastmcp>=2.12.2",
    "funasr>=1.2.7",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "openai>=1.107.0",
    "pyannote-audio>=3.4.0",
    "pyaudio>=0.2.14",
    "pyside6>=6.9.2",
    "qasync>=0.28.0",
    "reportlab>=4.4.3",
    "resampy>=0.4.3",
    "sounddevice>=0.5.2",
    "toml>=0.10.2",
    "webrtcvad>=2.0.10",
]
